--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -15,7 +15,8 @@ permissions:
       ItemMail.get: true
       ItemMail.send.total: true
       ItemMail.send.others: true
+      ItemMial.open: true
   ItemMail.admin.*:
     children:
-      ItemMail.open: true
+      ItemMail.open.others: true
       ItemMail.create: true
